# introduction-to-sphinx

./: .buildinfo  LICENSE  README.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.doctrees/: api.doctree  environment.pickle  index.doctree  usage.doctree
.github/workflows/: main.yml
_sources/: api.rst.txt  index.rst.txt
cdpr_analysis/: __init__.py  model.py  types.py
cdpr_analysis/analysis/: __init__.py  forward_kinematics.py  inverse_kinematics.py
doc/source/: api.rst  conf.py  index.rst  usage.rst
doc/source/_templates/: class.rst  module.rst
src/cdpr_analysis/: __init__.py  model.py  types.py
src/cdpr_analysis/analysis/: __init__.py  kinematics.py
