[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdpr_analysis"
version = "1.0.0"
authors = [{name="Patrick Huynh", email=""}]
description = "An example python module to demonstrate creating documentation with sphinx"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]